unit-test-metadata/main/default/objects/reduivy__Individual_Program_Application__c/fields/Test_continuing_education_master_degree__c.field-meta.xml
<CustomField>
    <fullName>Test_continuing_education_master_degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test continuing education master degree</label>
    <type>Checkbox</type>
</CustomField>