unit-test-metadata/main/default/objects/reduivy__Individual_Program_Application__c/fields/Test_Diploma_of_Advanced_Studies__c.field-meta.xml
<CustomField>
    <fullName>Test_Diploma_of_Advanced_Studies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Diploma of Advanced Studies</label>
    <type>Checkbox</type>
</CustomField>