unit-test-metadata/main/default/objects/reduivy__Individual_Program_Application__c/fields/Test_Doctoral_degree_PhD__c.field-meta.xml
<CustomField>
    <fullName>Test_Doctoral_degree_PhD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Doctoral degree (PhD)</label>
    <type>Checkbox</type>
</CustomField>