unit-test-metadata/main/default/objects/reduivy__Individual_Program_Application__c/fields/Test_English_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Test_English_Proficiency__c</fullName>
    <description>Testing for Application Scoring Mechanism</description>
    <inlineHelpText>Testing for Application Scoring Mechanism</inlineHelpText>
    <label>Test English Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>