unit-test-metadata/main/default/objects/reduivy__Individual_Program_Application__c/fields/Test_Official_university_master_s_degree__c.field-meta.xml
<CustomField>
    <fullName>Test_Official_university_master_s_degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Official university master&apos;s degree</label>
    <type>Checkbox</type>
</CustomField>