unit-test-metadata/main/default/objects/reduivy__Individual_Program_Application__c/fields/Test_Previous_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Test_Previous_CGPA__c</fullName>
    <description>Testing for Application Scoring Mechanism</description>
    <inlineHelpText>Testing for Application Scoring Mechanism</inlineHelpText>
    <label>Test Previous CGPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>