unit-test-metadata/main/default/objects/reduivy__Individual_Program_Application__c/fields/Test_Requirements_Complete_Student__c.field-meta.xml
<CustomField>
    <fullName>Test_Requirements_Complete_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the application has met all requirements from an student perspective</description>
    <inlineHelpText>Indicates that the application has met all requirements from an student perspective</inlineHelpText>
    <label>Requirements Complete (Student)</label>
    <type>Checkbox</type>
</CustomField>