unit-test-metadata/main/default/objects/reduivy__Individual_Program_Application__c/fields/Test_Teaching_Period__c.field-meta.xml
<CustomField>
    <fullName>Test_Teaching_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing for Application Scoring Mechanism</description>
    <inlineHelpText>Testing for Application Scoring Mechanism</inlineHelpText>
    <label>Test Teaching Period</label>
    <type>Checkbox</type>
</CustomField>